added userdb config and port

--- a/configmap.yaml
+++ b/configmap.yaml
@@ -4,3 +4,6 @@ metadata:
   name: dbconfig
 data:
   database-name: microservices
+  database-userdb-host: userdb-mysql
+  database-userdb-port: 3306
+  
