--- a/configmap.yaml
+++ b/configmap.yaml
@@ -5,5 +5,6 @@ metadata:
 data:
   database-name: microservices
   database-userdb-host: userdb-mysql
-  database-userdb-port: 3306
+  database-user: root
+  database-orderdb-host: orderdb-mysql
   
