--- a/userservice-service.yaml
+++ b/userservice-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: orderdb-mysql-service
+  name: userservice-service
 spec:
   ports:
-  - port: 3306
+  - port: 80
     protocol: TCP
-    targetPort: 3306
+    targetPort: 8080
   selector:
-    app: orderdb-mysql
+    app: userservice
   type: ClusterIP
